# tfgsp

./: .dockerignore  .gitignore  Makefile.am  README.md  config.h  config.h.in~  config.status  configure.ac  configure~
contrib/: check-consensus-determinism.py  gsp-progress-watchdog.sh  repin-genesis.sh  set-dev-address.sh
data/: README.md
database/: Makefile.am  activity.cpp  activity.hpp  amount.hpp  battlelosses.cpp  battlelosses.hpp  battlelosses_tests.cpp  database.cpp  database.hpp  database.tpp  database_tests.cpp  dbtest.cpp  dbtest.hpp  fighter.cpp  fighter.hpp  fighter.tpp  fighter_tests.cpp  globaldata.cpp  globaldata.hpp  inventory.cpp  inventory.hpp  inventory_tests.cpp  lazyproto.hpp  lazyproto.tpp  lazyproto_tests.cpp  ongoings.cpp  ongoings.hpp  params.cpp  params.hpp  params_tests.cpp  recipe.cpp  recipe.hpp  reward.cpp  reward.hpp  schema.hpp  schema.sql  schema_head.cpp  schema_tests.cpp  specialtournament.cpp  specialtournament.hpp  (+10 more)
docker/: Dockerfile  docker-compose.yml  entrypoint.sh
docs/: code-review-2026-07-01.md  cook-autocollect-spec.md  crown-removal-plan.md  crown-removal.md  duels-prototype-spec.md  economy-live-tuning-backlog.md  exchange-scale-plan.md  exchange-scale-spec.md  h3-cutover-plan.md  launch-punchlist.md  launch-runbook.md  original-vs-rewrite.md  p-e1-loadbench.md  pass-c-plan.md  phase2-storage-and-cleanup-audit.md  quality-audit-2026-06-29.md  quality-audit-findings.md  reorg-and-scale-testing-plan.md  reward-autocredit-spec.md  security-audit.md
docs/superpowers/plans/: 2026-07-05-balance-harder-treats-tournament-death.md  2026-07-05-cook-autocollect-plan.md  2026-07-08-sweetness-scaled-durations.md  2026-07-13-duels-prototype.md  2026-07-14-duel-combat-depth.md
docs/superpowers/specs/: 2026-07-05-balance-harder-treats-tournament-death-design.md  2026-07-08-sweetness-scaled-durations-design.md  2026-07-14-duel-combat-depth-design.md
duel/: .gitignore  README.md  build.sh  gen-stats.mjs  publish-fe.sh
duel/data/: duel-stats.json
duel/src/: engine.cpp  engine.h  jsonout.h  state.h  stats_gen.h  wire.h
duel/test/: moves_meta_gen.h  parity.mjs  test_main.cpp
gametest/: Makefile.am  accounts.py  burnsale.py  godmode.py  pending.py  pxtest.py  run-test.sh  specialtournament.py  specialtournamentleave.py
libwinsane/: Makefile.am
polygon-test/: README.md  integration.py
proto/: Makefile.am  activity.pb.cc  activity.pb.h  activity.proto  activity_pb2.py  activity_reward_instance.proto  activity_rewards.pb.cc  activity_rewards.pb.h  activity_rewards.proto  activity_rewards_pb2.py  animation.pb.cc  animation.pb.h  animation.proto  animation_pb2.py  armor_piece.pb.cc  armor_piece.pb.h  armor_piece.proto  armor_piece_pb2.py  blocks.proto  candy.pb.cc  candy.pb.h  candy.proto  candy_pb2.py  config.proto  config_pb2.py  crafted_recipe.pb.cc  crafted_recipe.pb.h  crafted_recipe.proto  crafted_recipe_pb2.py  crystal_bundle.pb.cc  crystal_bundle.pb.h  crystal_bundle.proto  crystal_bundle_pb2.py  expedition_blueprint.pb.cc  expedition_blueprint.pb.h  expedition_blueprint.proto  expedition_blueprint_pb2.py  fighter.pb.cc  fighter.pb.h  fighter.proto  (+50 more)
proto/roconfig/: activityrewardstable.pb.text  animation.pb.text  candy.pb.text  crystalbundle.pb.text  expeditionblueprint.pb.text  fightermoveblueprint.pb.text  fightername.pb.text  fightertype.pb.text  goody.pb.text  goodybundle.pb.text  params.pb.text  recepies.pb.text  regtest_unittest.pb.text  sweetenerblueprint.pb.text  test_params.pb.text  testnet.pb.text  tournamentblueprint.pb.text
proto2/: Makefile.am  roconfig.pb  roconfig.pb.text  roconfig_tests.cpp
src/: .gitignore  Makefile.am  burnsale.cpp  burnsale.hpp  charon.cpp  charon.hpp  context.cpp  context.hpp  forks.cpp  forks.hpp  forks_tests.cpp  gamestatejson.cpp  gamestatejson.hpp  gamestatejson_tests.cpp  goldenreplay.golden.json  goldenreplay_tests.cpp  jsonutils.cpp  jsonutils.hpp  jsonutils_tests.cpp  loadbench_tests.cpp  log.txt  logic.cpp  logic.hpp  logic_combat.cpp  logic_resolve.cpp  logic_tests.cpp  logic_tournament.cpp  main.cpp  moveprocessor.cpp  moveprocessor.hpp  moveprocessor_activity.cpp  moveprocessor_cooking.cpp  moveprocessor_exchange.cpp  moveprocessor_fighter.cpp  moveprocessor_internal.hpp  moveprocessor_purchase.cpp  moveprocessor_tests.cpp  params.cpp  params.hpp  pending.cpp  (+15 more)
src/fpm/: fixed.hpp
src/rpc-stubs/: pxd.json  tf-rpc.json
tfd-0.4/: Makefile.am  configure.ac
tfd-0.4/proto/: Makefile.am  roconfig.hpp  roconfig_gen.cpp  xaya_player.pb.h  xaya_player.proto  xaya_player_pb2.py
